experimental menu syslinux

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,5 +1,14 @@
-DEFAULT linux
-LABEL linux
+DEFAULT diskmag
+LABEL diskmag
+  MENU LABEL NOMAD DISKMAG
+  SAY _______BOOTING___NOMAD_DISKMAG
+  KERNEL bzImage
+  APPEND initrd=rootfs.cpio.gz
+
+LABEL floppinux
+  MENU LABEL FLOPPINUX
   SAY _______BOOTING___FLOPPINUX___VERSION_0.2.1
   KERNEL bzImage
   APPEND initrd=rootfs.cpio.gz
+
+TIMEOUT 3
