--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,14 +1,19 @@
+PROMPT 1
+MENU TITLE FLOPPINUX Boot Menu
+TIMEOUT 3
 DEFAULT diskmag
+
 LABEL diskmag
   MENU LABEL NOMAD DISKMAG
   SAY _______BOOTING___NOMAD_DISKMAG
   KERNEL bzImage
-  APPEND initrd=rootfs.cpio.gz
+  APPEND home=/home/
+  INITRD rootfs.cpio.gz
 
 LABEL floppinux
   MENU LABEL FLOPPINUX
   SAY _______BOOTING___FLOPPINUX___VERSION_0.2.1
   KERNEL bzImage
-  APPEND initrd=rootfs.cpio.gz
+  APPEND home=/root/
+  INITRD rootfs.cpio.gz
 
-TIMEOUT 3
