command prompt added to boot options

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,19 +1,5 @@
-PROMPT 1
-MENU TITLE FLOPPINUX Boot Menu
-TIMEOUT 3
 DEFAULT diskmag
-
 LABEL diskmag
-  MENU LABEL NOMAD DISKMAG
-  SAY _______BOOTING___NOMAD_DISKMAG
+  SAY _______BOOTING___NOMAD_DISKMAG...
   KERNEL bzImage
-  APPEND home=/home/
   INITRD rootfs.cpio.gz
-
-LABEL floppinux
-  MENU LABEL FLOPPINUX
-  SAY _______BOOTING___FLOPPINUX___VERSION_0.2.1
-  KERNEL bzImage
-  APPEND home=/root/
-  INITRD rootfs.cpio.gz
-
