FLOPPINUX 0.2.2 - clean sample script

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,5 +1,5 @@
-DEFAULT diskmag
-LABEL diskmag
-  SAY _______BOOTING___NOMAD_DISKMAG...
+DEFAULT linux
+LABEL linux
+  SAY _______BOOTING___FLOPPINUX...
   KERNEL bzImage
-  INITRD rootfs.cpio.gz
+  INITRD rootfs.cpio.xz
